# Universal-Local-AI-Indexer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-website.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  engine.rs  extractors.rs  lib.rs  metadata.rs  qa.rs
crates/desktop-tauri/: Cargo.toml  tauri.conf.json
crates/desktop-tauri/src/: main.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs  query_intent.rs  suggest.rs
crates/gui/webpanel/: README.md  app.js  index.html  serve.ps1  styles.css
crates/gui/webpanel/components/: i18n.en.js  i18n.es.js  i18n.index.js
docs/: architecture.md  benchmarks.md  install-windows.md  issue-seeds.md  roadmap.md
fixtures/: sample1.txt  sample2.md
scripts/: bench.ps1
scripts/ai/: run-local-ai-server.ps1  setup-local-ai.ps1
website/: README.md  astro.config.mjs  package.json
website/.astro/: data-store.json  settings.json
website/src/lib/: docs.ts
website/src/pages/: docs.astro  index.astro
website/src/pages/docs/: [doc].astro
website/src/styles/: global.css
