[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
toml = "0.8"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
num_cpus = "1"
