[workspace]
members = ["crates/core", "crates/cli", "crates/gui", "crates/desktop-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = true }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
eframe = { version = "0.30", default-features = true }
gag = "1"
image = "0.25"
num_cpus = "1"
notify = "8"
pdf-extract = "0.7"
quick-xml = "0.38"
rayon = "1"
regex = "1"
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
toml = "0.8"
ureq = { version = "2.10", features = ["json"] }
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
