[package]
name = "lupa"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
notify.workspace = true
num_cpus.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
lupa-core = { path = "../core" }
