[package]
name = "lupa-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
rayon.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
toml.workspace = true
walkdir.workspace = true
xxhash-rust.workspace = true
