[package]
name = "lupa-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
pdf = ["dep:pdf-extract"]

[dependencies]
anyhow.workspace = true
quick-xml.workspace = true
rayon.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
toml.workspace = true
walkdir.workspace = true
xxhash-rust.workspace = true
zip.workspace = true
pdf-extract = { version = "0.7", optional = true }
