[package]
name = "lupa-desktop-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
lupa-core = { path = "../core" }
tauri = { version = "1.8", features = ["shell-open", "dialog-open", "clipboard-write-text", "protocol-asset"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
