[package]
name = "lupa-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
eframe.workspace = true
gag.workspace = true
image.workspace = true
notify.workspace = true
rfd.workspace = true
serde_json.workspace = true
lupa-core = { path = "../core" }
